[tool.poetry]
name = "super-openai"
version = "0.0.0"
description = ""
authors = ["aman-stelo <aman@stelolabs.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "super_openai"}]

[tool.poetry.dependencies]
python = "^3.10"
contextvars = "^2.4"
cachetools = "^5.3.2"
openai = "^1.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
