[tool.poetry]
name = "super-openai"
version = "0.1.0"
description = "Logging and caching superpowers for the openai sdk"
authors = ["Aman Dhesi <aman@stelolabs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/villagecomputing/super-openai"
packages = [{ include = "super_openai" }]

[tool.poetry.dependencies]
python = "^3.10"
contextvars = "^2.4"
cachetools = "^5.3.2"
openai = "^1.12.0"
prettytable = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
langchain = "^0.1.11"
langchain-openai = "^0.0.8"
langchain-experimental = "^0.0.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
